#1282 Fix screen jumping when user open/close left sidebar

--- a/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
+++ b/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
@@ -109,6 +109,9 @@
 }
 
 .user-layout-right-content {
+
+  transition: 0.2s;
+
   width: 100%;
   height: 100%;
 
